--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <div class="container">
         <h1>HELLO MUNI</h1>
+        <p> 이게 나단님의 방식인가요..? 커밋 메시지 롤링페이퍼라 신박하네요. 도대체 어디 쓰신거지 한참 찾다가 커밋 메시지를 발견했어요... 
+        아무튼 무늬님 저희 팀의 선도부장으로 항상 기강을 잡아주셨는데 가시다니 마음이 아픕니다. 저는 반년 뿐 같이 일하지 않았지만 
+        되게 오래 함께 일한 것처럼 정들었는데 아쉽고 그럼니다. 어디서가든 잘 하실 거 같으니 놓아드리겠습니다.. 클린코드 스터디에서 뵈어요. 그동안 즐거웠습니다.
+        김동하 드림!
+        </p>
     </div>
 </body>
 </html>
