--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="app.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1>HELLO MUNI</h1>
+      <h1>HELLO MUNI</h1>
+      <section>
+        <h3>to. 무니쨩 .. s2</h3>
+        <p>
+          나단님 덕에 두번째 적는 롤링페이퍼 ,,ㅎㅎ <br />
+          이미.. 하고 싶은말은 다 했지만 <br />
+          출근이 얼마 남지 않은 시점에서 떠오르는 말들을 끄집어 내 봅니다…!<br />
+          반품 .. 한다고 마지막까지 고생 많았어요 무늬님! <br />
+          송장 코드 보는데도.. 고심한 흔적이 많이 보임,, 바짓가랑이라도
+          붙잡고싶지만..무늬님을 위해 내 보내드리리다 !!! :( <br />
+          11월 잘 충전해서 입사초 초롱초롱 무늬쨩으로 다시 돌아오길 !!! <br />
+          우리 존재 화이팅 이요 ! 아자자아자자자
+        </p>
+      </section>
     </div>
-</body>
+  </body>
 </html>
