--- a/index.html
+++ b/index.html
@@ -33,6 +33,25 @@
        <section>
         <p id="from-jaewan"></p>
       </section>
+
+       <section class="gang">
+        <br />
+        <h3>💟 내 소듕한 짝꿍 무니님 💟</h3>
+        <p>
+          내가 정말정말 좋아하는 짝꿍님<br />
+          알게 모르게 많이 의지도 되고 든든하고 힘이 되었어요<br />
+          그래서 그런지 갑자기 옆자리에 무늬님이 없으면 너무 허전하고 보고 싶을 것 같아요<br />
+          하지만 괜찮아요 우리의 만남은 마지막이 아니니까요<br />
+          항상 더 나아지기 위해 노력하고 성장하고 싶어 하는 무늬님을 보면서 느낀것도 배운것도 많아요<br />
+          옆에 있으면 함께 성장할 수 있는 좋은 사람이라고 생각했어요<br />
+          생각이 많은 무늬님...스스로를 어떻게 생각하든 저는 무늬님이 뭐든 할 수 있는 단단하고 강한 사람으로 보여요<br />
+          자신을 믿고 지금처럼 생각하는대로 쭉쭉 나아가시길 바래요<br />
+          무늬님의 선택과 앞으로를 항상 응원합니다!<br />
+          여행하면서 좋은거 많이 보고 맑은공기 마시고 맛있는거 많이 먹으면서 힐링하고 와서 봐요<br />
+          스터디해야되니깐 😠
+        </p>
+        <br />
+      </section>
       
       <div class={'jaeha'}>
         <p>{'앞서간 지레짐작일 수도 있겠지만, 무늬님 겪으시는 상황에 도움이 될 만한 조언 하나 드립니다'}</p>
